# marky-mark-bot

./: .gitignore  README.md  pyproject.toml
app/: config.py  constants.py  db.py  fsm.py  main.py
app/abstractions/: is_registered_interface.py  register_chat_id_interface.py  students_repo_interface.py
app/models/: __init__.py  attendance.py  banned_subject.py  subjects.py
app/repositories/: students_repository.py
app/routes/: mark_route.py  start_route.py
app/services/: is_registered_service.py  register_chat_id_service.py
app/values/: mark_callback.py  student.py
migrations/: env.py
migrations/versions/: f470fddb5d50_initial.py
tests/: conftest.py  test_repo.py
